0.7.1/_sources/modules/simplify/simplify.txt
Simplify
********

.. currentmodule:: sympy.simplify.simplify

simplify
--------
.. autofunction:: simplify

collect
-------
.. autofunction:: collect

separate
--------
.. autofunction:: separate

radsimp
-------
.. autofunction:: radsimp

ratsimp
-------
.. autofunction:: ratsimp

fraction
--------
.. autofunction:: fraction

trigsimp
--------
.. autofunction:: trigsimp

powsimp
-------
.. autofunction:: powsimp

combsimp
--------
.. autofunction:: combsimp

hypersimp
---------
.. autofunction:: hypersimp

hypersimilar
------------
.. autofunction:: hypersimilar

nsimplify
---------
.. autofunction:: nsimplify

Rewrite
-------
.. module:: sympy.simplify.rewrite

Square Root Denest
------------------
.. module:: sympy.simplify.sqrtdenest

sqrtdenest
^^^^^^^^^^
.. autofunction:: sqrtdenest

Common Subexpresion Elimination
-------------------------------
.. module:: sympy.simplify.cse_main

cse
^^^
.. autofunction:: cse

Hypergeometric Function Expansion
---------------------------------
.. autofunction:: sympy.simplify.hyperexpand.hyperexpand
